syntax = "proto3";

package taoniu.local.cryptos.grpc.binance.spot.analysis.tradings.fishers.grids;
option go_package = "taoniu.local/cryptos/grpc/binance/spot/tradings/fishers/grids";

import "google/protobuf/timestamp.proto";

service Grids {
  rpc Pagenate (PagenateRequest) returns (PagenateReply) {}
}

message GridInfo {
  string id = 1;
  string symbol = 2;
  float buyPrice = 3;
  float buyQuantity = 4;
  float sellPrice = 5;
  float sellQuantity = 6;
  int32 status = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}

message PagenateRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message PagenateReply {
  int64 total = 1;
  repeated GridInfo data = 2;
}
